tests/baselines/reference/moduleAugmentationGlobal8(strict=true).errors.txt
moduleAugmentationGlobal8.ts(2,13): error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
moduleAugmentationGlobal8.ts(3,30): error TS7008: Member 'x' implicitly has an 'any' type.


==== moduleAugmentationGlobal8.ts (2 errors) ====
    namespace A {
        declare global {
                ~~~~~~
!!! error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
            interface Array<T> { x }
                                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        }
    }
    export {}
    